<resources>
    <string name="app_name">Debtcred Manager</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="vargani_Events">Vargani Events</string>
    <string name="menu_options">Menu Options :</string>
    <string name="day_wise_collection_trend">Day Wise Collection</string>

    <string name="event_information">Event Information</string>
    <string name="register_event">Register Event</string>
    <string name="expense">Expense</string>
    <string name="expense_for_what">Expense For What</string>
    <string name="name_of_person_optional">Name of Person (Optional)</string>
    <string name="add">Add</string>
    <string name="vargani">Vargani</string>
    <string name="reciept_id_will_requires_only_once_when_you_first_open">* Reciept ID will requires only once when you First Open</string>
    <string name="reciept_id">Reciept ID</string>
    <string name="is_vargani_paid">Is Vargani Paid</string>
    <string name="date_paid">Date Paid</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="rec_id">ID</string>
    <string name="payer_name">Name</string>
    <string name="amount">Amount</string>
    <string name="income">Vargani Balance</string>
    <string name="pending">Pending</string>
    <string name="vargani_balance">Vargani Balance</string>
    <string name="expanditure">Expanditure</string>
    <string name="pending_vargani">Pending Vargani</string>
    <string name="vargani_list">Vargani List</string>
    <string name="date">Date</string>
    <string name="paiddate">Paiddate</string>
    <string name="expense_list">Expense List</string>
    <string name="expense_for">Expense for</string>
    <string name="given_to">Given To</string>
    <string name="successfully_registered">Expanditure Successfully Registered....</string>
    <string name="event_not_registered">Event Not Registered ....</string>
    <string name="event_removed_success">Event Information Removed Successfully....</string>
    <string name="event_not_registred">Event Not Removed ....</string>
    <string name="permission_required">permission Required...</string>
    <string name="greator_than_zero">Event Length Must be Greator Than Zero</string>
    <string name="name_greator_than_zero">Name length Must be Greater Than Zero</string>
    <string name="data_removed">Data Removed Successfully...</string>
    <string name="amount_greator_than_zero">Amount Should be Greater Than 0...</string>
    <string name="expense_for_what_req">Pls Specify the Expense for What....</string>
    <string name="expense_for_w">Expense for ?</string>
    <string name="reset_application">Reset Application...</string>
    <string name="reset_application_message">Once You Click On Reset All Data will get deleted...</string>
    <string name="reset">Reset</string>
    <string name="reciept_id_required">Reciept ID is Required....</string>
    <string name="reciept_id_taken_by_another">Reciept ID is Taken Use Another...</string>
    <string name="payer_name_required">Payer Name is Requied...</string>
    <string name="amount_must_greator_than_zero">Amount Must be Greater than Zero...</string>
    <string name="want_to_delete">\"Want To Delete ? \"</string>
    <string name="once_deleted">\"Once Deleted Records will get Removed From Application.... \"</string>
    <string name="delete">Delete</string>
    <string name="removed_successfully">Removed Successfully...</string>
    <string name="cancel">Cancel</string>
</resources>