<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/rec_id"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:id="@+id/reciept_ID"
        android:layout_margin="5sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="0sp"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:text="@string/payer_name"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:maxLines="1"
        android:maxEms="10"
        android:id="@+id/reciept_Name"
        android:layout_margin="5sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:id="@+id/reciept_Amount"
        android:layout_margin="5sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:id="@+id/reciept_DateCreated"
        android:layout_margin="5sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/paiddate"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:id="@+id/reciept_paid_date"
        android:layout_margin="5sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"/>

</LinearLayout>