<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp"
    android:id="@+id/click"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20sp"
        app:cardElevation="10sp"
        android:layout_margin="10sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10sp"
            android:background="@drawable/exp_backg"

            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/calender"
                    android:layout_margin="10sp"/>
            <TextView
                android:layout_width="0sp"
                android:layout_weight="0.8"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="Hii Its COurse"
                android:textStyle="bold"
                android:background="@drawable/textview"
                android:padding="10sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5sp"
                android:textSize="20sp"
                android:id="@+id/displayEventName"/>


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hii Its COurse"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10sp"
                android:id="@+id/displayEventDate"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="0.6"/>
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="1200000"
                    android:id="@+id/displayEventIncome"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="0.4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="@string/expanditure"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="0.6"/>
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="1200000"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:id="@+id/displayEventExpanditure"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="0.4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:text="@string/pending"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="0.6"/>
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="1200000"
                    android:layout_gravity="center"
                    android:id="@+id/displayEventPending"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="0.4"/>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>